infrastructure/directus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus
  namespace: directus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: directus
  template:
    metadata:
      labels:
        app: directus
    spec:
      containers:
        - name: directus
          image: directus/directus:11
          ports:
            - containerPort: 8055
