infrastructure/directus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: directus
  namespace: directus
spec:
  selector:
    app: directus
  ports:
    - port: 8055
      targetPort: 8055
